# V01

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  demo_3d_graph.html  demo_graph.db  demo_graph_3d.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  reply_minimal.py
core/: __init__.py  defaults.py  llm_client.py
deploy/: .env.vps.example  VPS_DEPLOY.md
docs/: ARCHITECTURE.md  COMPETITIVE.md  FRONTIER_VISION_REPORT.md  PRICING.md  ROADMAP.md  VISION.md  architecture.md  domain-model.md  identity-profile.md  motivation-engine.md  onboarding-and-identity-bootstrap.md  onboarding-flow.md  proactive-loop.md  product-positioning.md  retrieval-architecture.md  retrieval-strategy.md  roadmap.md  scoring-model.md  vision.md
interfaces/: __init__.py  processor_factory.py
scripts/: benchmark_neuro_layer.py  generate_demo.py  migrate_stage3.py  print_7sms_summary.py  run_7sms_full_report.py  visualize_3d_graph.py
tests/: test_agent_action_store.py  test_analysis_engine.py  test_apply_changes_atomic.py  test_calibrator.py  test_cognitive_detector.py  test_conflicts_autodetect.py  test_context_builder.py  test_create_edge_safe.py  test_drift_and_baseline.py  test_embeddings.py  test_extraction_quality.py  test_extractor_emotion.py  test_extractor_semantic.py  test_goal_engine.py  test_graph_api.py  test_graph_metrics.py  test_hybrid_search.py  test_hybrid_search_storage.py  test_identity_profile.py  test_identity_snapshot.py  test_ifs_council.py  test_inner_council.py  (+46 more)
(+116 files in other folders)
