[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-os"
version = "0.1.0"
description = "SELF-OS Stage 1 accumulating core"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.1,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "openai>=1.40.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "networkx>=3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

